# rpi-face-recognition

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  MILESTONE_1.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  ATTRIBUTIONS.md  BENCHMARK.md  QUANTIZATION.md  architecture.md
scripts/: benchmark.py  benchmark_pipeline.py  benchmark_video.py  compare_backends.py  download_chokepoint.sh  download_fanvid.py  download_models.sh  evaluate_lfw.py  quantize_scrfd.py  service.sh
server/: app.py  handlers.py  streamer.py
server/templates/: index.html  style.css
slop/avdieienko/: config.yaml  main.py
slop/shalaiev/: .env.example  main.py  pyproject.toml  test_camera.py
slop/shalaiev/butler/: camera.py  display.py  pipeline.py  settings.py
slop/shalaiev/butler/detectors/: __init__.py  base.py  scrfd.py  ultraface.py
slop/shalaiev/butler/recognition/: __init__.py  align.py  base.py  database.py  mobilefacenet.py
slop/shalaiev/docs/: MILESTONE_2.md  MILESTONE_2_TECHNICAL.md  PROJECT_IDEA.md
slop/valenia/: .gitignore  .pre-commit-config.yaml  AGENTS.md  MILESTONE_2.md  MILESTONE_2_TECH_REPORT.md  README.md  pyproject.toml
slop/valenia/docs/: ARCHITECTURE.md  BENCHMARK_FINDINGS_2026-02-28.md  INITIAL_BENCHMARK.md  LFW_VALIDATION.md  LIVE_CAMERA_SERVER.md  MILESTONE_1_STATUS.md  PI5_EXECUTION_PLAN.md
slop/valenia/docs/imported/: FINAL_REPORT.md  avalenia_face_recognition_pipeline_report.md
slop/valenia/docs/metrics/: fp32_vs_int8_image_compare.json  lfw_dev_baseline.json  lfw_dev_view2_baseline.json  lfw_view2_fp32_2026-02-28.json  lfw_view2_int8_2026-02-28.json
slop/valenia/scripts/: benchmark_pipeline.py  bootstrap_pi.sh  capture_test_frame.sh  compare_pipeline_variants.py  download_lfw_dataset.sh  download_models.sh  evaluate_lfw.py  live_camera_server.py  manage_live_camera_service.sh
slop/valenia/src/: arcface.py  contracts.py  face_align.py  gallery.py  live_runtime.py  pipeline.py  pipeline_factory.py  quality.py  runtime_utils.py  scrfd.py  tracking.py
slop/valenia/tests/: conftest.py  test_gallery_store.py  test_live_runtime.py  test_pipeline_factory.py  test_quality.py
src/: alignment.py  capture.py  config.py  contracts.py  display.py  gallery.py  live.py  metrics.py  onnx_session.py  pipeline.py  quality.py  quantization.py  tracking.py
src/benchmarking/: __init__.py  config.py  ground_truth.py  video_metrics.py
src/detection/: __init__.py  _base.py  insightface.py  scrfd.py  ultraface.py
src/display/: renderer.py
src/embedding/: __init__.py  arcface.py  base.py  mobilefacenet.py
src/matching/: database.py
src/tracking/: __init__.py  _base.py  kalman.py  simple.py
tests/: conftest.py  test_alignment.py  test_config.py  test_contracts.py  test_gallery.py  test_handlers.py  test_live.py  test_pipeline.py  test_tracking.py
(+10 files in other folders)
