[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-contrib-python>=4.10",
    "picamera2>=0.3.34",
    "python-dotenv>=1.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.18",
    "faiss-cpu>=1.8",
]
