[project]
name = "rpi-face-recognition"
version = "0.1.0"
description = "Modular face recognition pipeline for Raspberry Pi."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.3.0",
]

[dependency-groups]
dev = [
  "pre-commit>=4.1.0",
  "pytest>=8.4.0",
  "pyright>=1.1.390",
  "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "scripts", "tests"]
extend-exclude = ["data", "models"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"slop/valenia/scripts/*.py" = ["E402"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["src", "scripts", "tests"]
exclude = ["data", "models", "docs"]
reportMissingImports = "none"
reportMissingTypeStubs = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
